# mcp-microsoft-graph-auth

./: .markdownlint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENGINEERING_PRINCIPLES.md  PROJECT_MANAGEMENT_PRINCIPLES.md  PROJECT_SPECIFICS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
src/mcp_microsoft_graph_auth/: __init__.py  _filelock.py  device_code.py  login_session.py  service_principal.py  token_store.py  tokens.py
tests/: run_tests.sh
tests/unit/: test_device_code.py  test_filelock.py  test_login_session.py  test_service_principal.py  test_token_store.py  test_tokens.py
